<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

  <TextView
      android:id="@+id/textView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/margin_16"
      android:layout_marginEnd="@dimen/margin_16"
      android:layout_marginTop="@dimen/margin_16"
      android:fontFamily="@font/bold"
      android:text="@string/title_name"
      android:textSize="@dimen/font_14"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <com.ndroid.CoolEditText
      android:id="@+id/etName"
      style="@style/coolEditText"
      android:hint="@string/title_name"
      android:inputType="text"
      android:maxLines="1"
      android:imeOptions="actionDone"
      android:layout_marginTop="@dimen/margin_10"
      android:layout_marginStart="@dimen/margin_16"
      android:layout_marginEnd="@dimen/margin_16"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView" />

  <TextView
      android:id="@+id/textView2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/margin_16"
      android:layout_marginTop="@dimen/margin_10"
      android:layout_marginEnd="@dimen/margin_16"
      android:text="@string/title_gandre"
      android:fontFamily="@font/bold"
      android:textSize="@dimen/font_14"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/etName" />

  <RadioGroup
      android:id="@+id/rgGanre"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin_10"
      android:layout_marginStart="@dimen/margin_16"
      android:layout_marginEnd="@dimen/margin_16"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView2">
    <RadioButton
        android:id="@+id/rbMan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_man"
        android:fontFamily="@font/regular"/>
    <RadioButton
        android:id="@+id/rbWoman"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_woman"
        android:fontFamily="@font/regular"/>
  </RadioGroup>

  <TextView
      android:id="@+id/textView3"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/margin_16"
      android:layout_marginTop="@dimen/margin_10"
      android:layout_marginEnd="@dimen/margin_16"
      android:fontFamily="@font/bold"
      android:text="@string/title_tmp_lahir"
      android:textSize="@dimen/font_14"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/rgGanre" />

  <com.ndroid.CoolEditText
      android:id="@+id/etTmpLahir"
      style="@style/coolEditText"
      android:inputType="text"
      android:maxLines="1"
      android:imeOptions="actionDone"
      android:hint="@string/title_tmp_lahir"
      android:layout_marginStart="@dimen/margin_16"
      android:layout_marginEnd="@dimen/margin_16"
      android:layout_marginTop="@dimen/margin_10"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView3" />

  <TextView
      android:id="@+id/textView4"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/margin_16"
      android:layout_marginTop="@dimen/margin_10"
      android:layout_marginEnd="@dimen/margin_16"
      android:fontFamily="@font/bold"
      android:text="@string/title_tgl_lahir"
      android:textSize="@dimen/font_14"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/etTmpLahir" />

  <com.ndroid.CoolEditText
      android:id="@+id/etTglLahir"
      style="@style/coolEditTextDisabled"
      android:inputType="text"
      android:hint="@string/title_tgl_lahir"
      android:drawableEnd="@drawable/ic_date"
      android:drawablePadding="@dimen/padding_10"
      android:layout_marginStart="@dimen/margin_16"
      android:layout_marginEnd="@dimen/margin_16"
      android:layout_marginTop="@dimen/margin_10"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView4" />

  <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
      android:id="@+id/fab"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:icon="@drawable/ic_save"
      app:iconTint="@color/white"
      android:text="@string/title_save"
      android:textColor="@color/white"
      android:layout_marginBottom="@dimen/margin_25"
      android:layout_marginEnd="@dimen/margin_16"
      app:backgroundTint="@color/colorPrimary"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>